--- a/src/app/starship-details/starship-details.component.html
+++ b/src/app/starship-details/starship-details.component.html
@@ -64,7 +64,7 @@
   </section>
   </div>
 
-  <div class="container">
+  <!-- <div class="container">
   <div class="container sec-info">
       <section fxLayout="row wrap" fxLayoutAlign="center center" *ngIf="film">
           <mat-card fxFlex="1100px" fxFlex.sm="100%" fxFlex.xs="100%">
@@ -74,21 +74,17 @@
                     <mat-card class="card my-card sm-card">
                         <mat-card-subtitle><a  href="{{character.url}}">{{character.name}}</a></mat-card-subtitle>
 
-                         <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + film.img_url + ')', 'background-size': 'cover'  }"></div> -->
+                        
                          <img mat-card-image class="header-img mat-card-avatar" src="{{character.img_url}}">
 
                       </mat-card>
-                      <!-- <mat-card class="card my-card">
-                          <mat-card-title><a href="https://www.google.com.sg">{{film.title}}</a></mat-card-title>
-                          <img mat-card-image src="{{film.img_url}}">
-
-                        </mat-card> -->
+                      
                 </div>
               </mat-card-content>
             </mat-card>
       </section>
     </div>
-  </div>
+  </div> -->
 
   <div class="container sec-info">
       <section fxLayout="row wrap" fxLayoutAlign="center center" *ngIf="starship">
@@ -118,7 +114,7 @@
   </div>
 
   <div class="container sec-info">
-      <section fxLayout="row wrap" fxLayoutAlign="center center" *ngIf="starship">
+      <section fxLayout="row wrap" fxLayoutAlign="center center"  *ngIf="starship">
           <mat-card fxFlex="1100px" fxFlex.xs="100%">
               <mat-card-title>Related Films</mat-card-title>
 
