--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -4,58 +4,58 @@
     <div fxLayout="row wrap" fxLayoutAlign="center" class="content">
         <div fxFlex.lg="30%" fxFlex.xl="30%" fxLayoutAlign="center">
             <div  class="card__img card__img--top">
-                <img class="category-image logo-img"  src="assets/images/Star_Wars_logo.png"> 
-               
+                <img class="category-image logo-img"  src="assets/images/Star_Wars_logo.png">
+
             </div>
         </div>
     </div>
     <div fxLayout="row wrap" class="content">
         <div fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category">
             <div  class="card__img card__img--top">
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/characters.jpg"> 
-                <span class="category-title tc-red-600 display-block jedi-font">Characters</span>
+                <img class="category-image" fxFlex.lg="100%" src="assets/images/characters.jpg" (click)="getToList('people')">
+                <span class="category-title tc-red-600 display-block jedi-font" (click)="getToList('people')">Characters</span>
             </div>
         </div>
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category">
             <div id="character" class="card__img card__img--top">
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/films.jpg"> 
-                <span class="category-title tc-yellow-400 display-block jedi-font">Films</span>
+                <img class="category-image" fxFlex.lg="100%" src="assets/images/films.jpg" (click)="getToList('film')">
+                <span class="category-title tc-yellow-400 display-block jedi-font" (click)="getToList('film')">Films</span>
             </div>
         </div>
-  
-       
+
+
 
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category">
             <div  class="card__img card__img--top">
-                <img class="category-image"  fxFlex.lg="100%" src="assets/images/species.jpg"> 
-                <span class="category-title tc-deep-orange-600  display-block jedi-font">Species</span>
+                <img class="category-image"  fxFlex.lg="100%" src="assets/images/species.jpg" (click)="getToList('species')">
+                <span class="category-title tc-deep-orange-600  display-block jedi-font" (click)="getToList('species')">Species</span>
             </div>
         </div>
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category category-last ">
             <div id="character" class="card__img card__img--top">
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/starships.jpg"> 
-                <span class="category-title tc-white-1 display-block jedi-font">Starships</span>
+                <img class="category-image" fxFlex.lg="100%" src="assets/images/starships.jpg" (click)="getToList('starship')">
+                <span class="category-title tc-white-1 display-block jedi-font" (click)="getToList('starship')">Starships</span>
             </div>
         </div>
-  
+
         <div fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%"  fxFlex.sm="30%" class="category category-last ">
             <div  class="card__img card__img--top">
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/vehicles.jpg"> 
-                <span class="category-title tc-blue-200 display-block jedi-font">Vehicles</span>
+                <img class="category-image" fxFlex.lg="100%" src="assets/images/vehicles.jpg" (click)="getToList('vehicle')">
+                <span class="category-title tc-blue-200 display-block jedi-font" (click)="getToList('vehicle')">Vehicles</span>
             </div>
         </div>
 
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%"  fxFlex.sm="30%" class="category category-last ">
             <div  class="card__img card__img--top">
-                <img class="category-image"  fxFlex.lg="100%" src="assets/images/planets.jpg"> 
-                <span class="category-title tc-deep-purple-300 display-block jedi-font">Planets</span>
+                <img class="category-image"  fxFlex.lg="100%" src="assets/images/planets.jpg" (click)="getToList('planet')">
+                <span class="category-title tc-deep-purple-300 display-block jedi-font" (click)="getToList('planet')">Planets</span>
             </div>
         </div>
     </div>
-    
 
-  
-  
-   
+
+
+
+
 
 </div>
