--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -12,13 +12,13 @@
     <div fxLayout="row wrap" class="content">
         <div fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category">
             <div  class="card__img card__img--top">
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/characters.jpg"> 
+                <img class="category-image" fxFlex="100%" src="assets/images/characters.jpg"> 
                 <span class="category-title tc-red-600 display-block jedi-font">Characters</span>
             </div>
         </div>
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category">
             <div id="character" class="card__img card__img--top">
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/films.jpg"> 
+                <img class="category-image" fxFlex="100%" src="assets/images/films.jpg"> 
                 <span class="category-title tc-yellow-400 display-block jedi-font">Films</span>
             </div>
         </div>
@@ -27,27 +27,27 @@
 
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category">
             <div  class="card__img card__img--top">
-                <img class="category-image"  fxFlex.lg="100%" src="assets/images/species.jpg"> 
+                <img class="category-image"  fxFlex="100%" src="assets/images/species.jpg"> 
                 <span class="category-title tc-deep-orange-600  display-block jedi-font">Species</span>
             </div>
         </div>
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category category-last ">
             <div id="character" class="card__img card__img--top">
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/starships.jpg"> 
+                <img class="category-image" fxFlex="100%" src="assets/images/starships.jpg"> 
                 <span class="category-title tc-white-1 display-block jedi-font">Starships</span>
             </div>
         </div>
   
         <div fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%"  fxFlex.sm="30%" class="category category-last ">
             <div  class="card__img card__img--top">
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/vehicles.jpg"> 
+                <img class="category-image" fxFlex="100%" src="assets/images/vehicles.jpg"> 
                 <span class="category-title tc-blue-200 display-block jedi-font">Vehicles</span>
             </div>
         </div>
 
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%"  fxFlex.sm="30%" class="category category-last ">
             <div  class="card__img card__img--top">
-                <img class="category-image"  fxFlex.lg="100%" src="assets/images/planets.jpg"> 
+                <img class="category-image"  fxFlex="100%"  src="assets/images/planets.jpg"> 
                 <span class="category-title tc-deep-purple-300 display-block jedi-font">Planets</span>
             </div>
         </div>
